# Locus

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.cursor/: mcp.json
.entroly/: .federation_id  archetype_strategy.json
docs/: lua-gc-monitor.md  tool-collapse-message-rendering-export.md  update.txt
prompt/: plan-reminder.md  workflow-completion-report.md
scripts/: build-locus-json-bundle.mjs  build-release-installers.mjs  chrome-devtools-mcp-wrapper.mjs  export-view-runtime-sources.mjs  generate-third-party-bundle.mjs  headroom-compress.mjs  prepare-agentmemory-bundle.mjs  prepare-codegraph-bundle.mjs  prepare-headroom-bundle.mjs  prepare-headroom-proxy-bundle.mjs  (+10 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.nsis-lzma.conf.json  tauri.with_embed_python_git.conf.json  tauri.without_embed_python_git.conf.json
src-tauri/.cursor/rules/: codegraph.mdc
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/scripts/: download-codegraph.sh
src-tauri/src/: code_tools.rs  codegraph_watcher.rs  compact.rs  config.rs  config_registry.rs  feishu_docs.rs  keychain.rs  knowledge_store.rs  lib.rs  logging.rs  lua_runtime.rs  network.rs  plugin.rs  process_util.rs  prompt.rs  python_runtime.rs  rtk_runtime.rs  unity_docs.rs  unity_serialized_property.rs  unity_type_index.rs  view.rs  windows_window_frame.rs  workspace.rs
src-tauri/src/agent/: definition.rs  mod.rs  session_language.rs
src-tauri/src/agent/instance/: anthropic_agent_sdk.rs  backend.rs  claude_code_cli.rs  mod.rs  read_file.rs  reviewer.rs  stage_tracker.rs  stages.rs  view_capture.rs
src-tauri/src/agent/review/: mod.rs
src-tauri/src/agent/task/: mod.rs
src-tauri/src/agent/workflow/: completion_report.rs  mod.rs  whitelist.rs
src-tauri/src/agentmemory/: actions.rs  advanced.rs  client.rs  iii_config.rs  llm_env.rs  mapping.rs  mod.rs  resolve.rs  semantic.rs  service.rs
src-tauri/src/asset_db/: db.rs  mod.rs  object_index.rs  scanner.rs  types.rs  watcher.rs
src-tauri/src/auth/: codex.rs  mod.rs
src-tauri/src/commands/: agent_graph.rs  asset.rs  auth.rs  csharp_lsp.rs  git.rs  knowledge.rs  log.rs  lua_gc_monitor.rs  memory.rs  mod.rs  plan.rs  plugin.rs  ref_graph.rs  session.rs  skill.rs  storage.rs  system.rs  undo.rs  unity_embed.rs  unity_serialized_property.rs  update.rs  view.rs  workspace.rs  workspace_browse_filters.rs
src-tauri/src/csharp_lsp/: assets.rs  client.rs  mod.rs
src-tauri/src/diff/: content.rs  profiler.rs
src-tauri/src/diff/semantic/: inspector.rs  list_matching.rs
src-tauri/src/headroom/: client.rs  context.rs  messages.rs  mod.rs  proxy_client.rs  proxy_service.rs  resolve.rs  rewrite.rs  settings.rs  tool_output.rs
src-tauri/src/knowledge_index/: db.rs  embedding.rs  mod.rs  tantivy_index.rs
src-tauri/src/llm/: anthropic.rs  anthropic_agent_sdk.rs  chat_completions.rs  claude_code_cli.rs  claude_http_hook.cjs  codex.rs  codex_models.rs  codex_usage.rs  mod.rs  openrouter.rs  responses.rs
src-tauri/src/memory/: correction.rs  mod.rs  models.rs  proposal.rs  retrieval.rs  store.rs
src-tauri/src/rtk/: mod.rs
src-tauri/src/session/: gateway.rs  history.rs  mod.rs  models.rs  pending_inputs.rs  runtime.rs  store.rs
src-tauri/src/tool/: mod.rs
src-tauri/src/tool/builtins/: agentmemory.rs  code.rs  code_unity.rs  codegraph.rs  filesystem.rs  knowledge.rs  lua_gc_analyze.rs  misc.rs  mod.rs  plugin.rs  search.rs  shell.rs  skill.rs  unity.rs  view.rs
src-tauri/src/unity_bridge/: background_hook.rs  lua_gc_monitor.rs  mod.rs  plugin.rs  process.rs  transport.rs
src-tauri/src/unity_csharp/: tests.rs
src-tauri/src/unity_yaml/: aggregation.rs  mod.rs  parser.rs  references.rs  tests.rs  tokenizer.rs
src-tauri/src/vcs/: git.rs  git_merge.rs  undo.rs
src-tauri/src/view/templates/: blank.rs  canvas_board.rs  common.rs  field_blocks.rs  inspector_form.rs  link_board.rs  mod.rs  node_graph.rs  serialized_table.rs
(+658 files in other folders)
